--- a/templates/index.html
+++ b/templates/index.html
@@ -19,7 +19,7 @@
               <th scope="row">{{ forloop.counter }}</th>
                 <td scope="row">{{ i.name }}</td>
                 <td scope="row">{{ i.mobile_no}}</td>
-              <td scope="row"><a href="{% url 'demoapp:details' i.id %}" class="btn btn-sm btn-primary">details</a><a href="{% url 'demoapp:delete' i.id %}" class="btn btn-sm btn-primary">delete</a></td>
+              <td scope="row"><a href="{% url 'demoapp:details' i.id %}" class="btn btn-sm btn-primary">details</a> <a href="{% url 'demoapp:delete' i.id %}" class="btn btn-sm btn-primary">delete</a> <a href="{% url 'demoapp:update_demo' i.id %}" class="btn btn-sm btn-primary">Update</a></td>
 
             </tr>
         {% endfor %}
